# KEL-8_SPS

./: Kopi Arabika_20251126_105006.json  Kopi Campuran_20251126_120429.json  Kopi Luwak_20251126_112811.json  Kopi Robusta_20251126_100904.json  Kopi_Arabika_20251126_104927.csv  Kopi_Campuran_20251126_120403.csv  Kopi_Luwak_20251126_112756.csv  Kopi_Robusta_20251126_100834.csv  README.md  Robusta Database.csv  plot.gnu  pyvenv.cfg
SAMPLING 1_ROBUSTA/: Kopi Arabika_20251126_105006.json  Kopi Luwak_20251126_112756.csv  Kopi Robusta_20251126_100834.csv  Robusta Database.csv
SAMPLING_1_ROBUSTA/SAMPLING_1_ROBUSTA/: Kopi Campuran_20251126_120429.json  Kopi Luwak_20251126_112811.json  Kopi Robusta_20251126_100904.json  Kopi_Arabika_20251126_104927.csv  Kopi_Campuran_20251126_120403.csv
SPS/: config.json  main.py  requirements.txt
SPS/enose_backend/: Cargo.toml
SPS/enose_backend/src/: main.rs
SPS/pbl_env/: pyvenv.cfg
SPS/pbl_env/Scripts/: activate  activate.bat
