[package]
name = "enose_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
parking_lot = "0.12"
